[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bingcnsearch-python"
version = "1.0.2"
authors = [
  { name="Tian", email="tianxuan911@aliyun.com" },
]
description = "A Python library for scraping the cn.bing.com search engine."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "beautifulsoup4>=4.9",
  "requests>=2.20",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/tianxuan911/bingcnsearch"
Issues = "https://github.com/tianxuan911/bingcnsearch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bingcnsearch"]